<?xml version="1.0"?>
<package>
  <name>generic_input_controller</name>
  <version>0.0.0</version>
  <description>Fully configurable node used to control one or more joint/actuator using keyboard or joystick.</description>
  <maintainer email="clynamen@gmail.com">clynamen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensors_msgs</run_depend>
  <export></export>
</package>
